<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="app_spotify_streamer">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_bib">Build it Big</string>
    <string name="app_reader">XYZ Reader</string>
    <string name="app_capstone">CAPSTONE: My Own App</string>
</resources>
