<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <TextView android:text="@string/title" android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04" />

        <Button
            style="@style/AppButtons"
            android:text="@string/app_spotify_streamer"
            android:id="@+id/btn_spotify_streamer"
            android:onClick="sendMessage"/>
        <Button
            style="@style/AppButtons"
            android:text="@string/app_scores"
            android:id="@+id/btn_scores"
            android:onClick="sendMessage"/>
        <Button
            style="@style/AppButtons"
            android:text="@string/app_library"
            android:id="@+id/btn_library"
            android:onClick="sendMessage"/>
        <Button
            style="@style/AppButtons"
            android:text="@string/app_bib"
            android:id="@+id/btn_bib"
            android:onClick="sendMessage"/>
        <Button
            style="@style/AppButtons"
            android:text="@string/app_reader"
            android:id="@+id/btn_reader"
            android:onClick="sendMessage"/>
        <Button
            style="@style/AppButtons2"
            android:text="@string/app_capstone"
            android:id="@+id/btn_campstone"
            android:onClick="sendMessage"/>
    </LinearLayout>
</RelativeLayout>
